--- a/OurMarkets/WebRoot/WEB-INF/web.xml
+++ b/OurMarkets/WebRoot/WEB-INF/web.xml
@@ -11,13 +11,13 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
-<!--   <listener> -->
-<!--     <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class> -->
-<!--   </listener> -->
-<!--   <context-param> -->
-<!--     <param-name>log4jConfigLocation</param-name> -->
-<!--     <param-value>classpath:log4j.properties</param-value> -->
-<!--   </context-param> -->
+  <listener>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:log4j.properties</param-value>
+  </context-param>
  
   <filter>
     <filter-name>encodingFilter</filter-name>
