--- a/OurMarkets/WebRoot/WEB-INF/web.xml
+++ b/OurMarkets/WebRoot/WEB-INF/web.xml
@@ -61,6 +61,10 @@
     <servlet-name>default</servlet-name>
     <url-pattern>*.css</url-pattern>
   </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.ttf</url-pattern>
+  </servlet-mapping>
   
   <!-- 配置spring核心servlet --> 
   <servlet>
