--- a/OurMarkets/WebRoot/WEB-INF/web.xml
+++ b/OurMarkets/WebRoot/WEB-INF/web.xml
@@ -65,8 +65,21 @@
     <servlet-name>default</servlet-name>
     <url-pattern>*.ttf</url-pattern>
   </servlet-mapping>
-  
-  <!-- 配置spring核心servlet --> 
+      <!-- 权限拦截器 -->
+<!--   <filter>   -->
+<!--     <filter-name>springSecurityFilterChain</filter-name>   -->
+<!--     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>   -->
+<!-- </filter>   -->
+   
+<!-- <filter-mapping>   -->
+<!--     <filter-name>springSecurityFilterChain</filter-name>   -->
+<!--     <url-pattern>/*</url-pattern>   -->
+<!-- </filter-mapping>  -->
+  <!-- 配置session过期时间 -->
+<!--   <session-config> -->
+<!--   	<session-timeout>20</session-timeout> -->
+<!--   </session-config> -->
+<!--   配置spring核心servlet  -->
   <servlet>
     <servlet-name>springRest</servlet-name>
     <servlet-class>
