--- a/OurMarkets/WebRoot/WEB-INF/web.xml
+++ b/OurMarkets/WebRoot/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <!-- 应用上下文配置文件 -->
-    <param-value>classpath:applicationContext.xml</param-value>
+    <param-value>classpath:applicationContext.xml,/WEB-INF/spring-security.xml</param-value>
   </context-param>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -36,6 +36,22 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+        <!-- 权限拦截器 -->
+<filter>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- 配置session过期时间 -->
+	<session-config>
+		<session-timeout>20</session-timeout>
+	</session-config>
+  
+  
    <!-- 配置静态资源访问 -->
   <servlet-mapping>
     <servlet-name>default</servlet-name>
@@ -65,20 +81,7 @@
     <servlet-name>default</servlet-name>
     <url-pattern>*.ttf</url-pattern>
   </servlet-mapping>
-      <!-- 权限拦截器 -->
-<!--   <filter>   -->
-<!--     <filter-name>springSecurityFilterChain</filter-name>   -->
-<!--     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>   -->
-<!-- </filter>   -->
-   
-<!-- <filter-mapping>   -->
-<!--     <filter-name>springSecurityFilterChain</filter-name>   -->
-<!--     <url-pattern>/*</url-pattern>   -->
-<!-- </filter-mapping>  -->
-  <!-- 配置session过期时间 -->
-<!--   <session-config> -->
-<!--   	<session-timeout>20</session-timeout> -->
-<!--   </session-config> -->
+
 <!--   配置spring核心servlet  -->
   <servlet>
     <servlet-name>springRest</servlet-name>
